// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay should apply className 1`] = `
<div
  className="makeStyles-root-1 alteredStyles"
/>
`;

exports[`Overlay should render 1`] = `
<div
  className="makeStyles-root-1"
/>
`;
